added couple of sections

--- a/index.html
+++ b/index.html
@@ -108,5 +108,38 @@
         </div>
       </div>
     </section>
+    <section class="perfomances">
+      <h2><span>наши</span> постановки</h2>
+      <div class="perfomance-gallery">
+        <div class="gallery-item">
+          <div class="gallery-layer">
+            <img src="assets/images/project-1.png" alt="Оскар 2020">
+            <h3>ОСКАР 2020</h3>
+            <h4>сентябрь 2020</h4>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <div class="gallery-layer">
+            <img src="assets/images/project-2.png" alt="Париж">
+            <h3>Париж</h3>
+            <h4>август 2020</h4>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <div class="gallery-layer">
+            <img src="assets/images/project-3.png" alt="Золотой грамофон">
+            <h3>золотой грамофон</h3>
+            <h4>июль 2020</h4>
+          </div>
+        </div>
+        <div class="gallery-item">
+          <div class="gallery-layer">
+            <img src="assets/images/project-4.png" alt="Щелкунчик">
+            <h3>щелкунчик</h3>
+            <h4>май 2020</h4>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
