--- a/index.html
+++ b/index.html
@@ -141,5 +141,27 @@
         </div>
       </div>
     </section>
+    <section class="rating">
+      <div class="medium-container">
+        <div class="rating-layer">
+          <div class="rating-years">
+            <h2>2018</h2>
+            <h2>2019</h2>
+            <h2>2020</h2>
+          </div>
+          <div class="rating-content">
+            <div class="rating-stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <p>Лучший театр
+              по мнению театральных критиков Парижа</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
