finished page (without adaptation)

--- a/index.html
+++ b/index.html
@@ -113,28 +113,28 @@
       <div class="perfomance-gallery">
         <div class="gallery-item">
           <div class="gallery-layer">
-            <img src="assets/images/project-1.png" alt="Оскар 2020">
+            <img src="assets/images/project-1.png" alt="Оскар 2020" />
             <h3>ОСКАР 2020</h3>
             <h4>сентябрь 2020</h4>
           </div>
         </div>
         <div class="gallery-item">
           <div class="gallery-layer">
-            <img src="assets/images/project-2.png" alt="Париж">
+            <img src="assets/images/project-2.png" alt="Париж" />
             <h3>Париж</h3>
             <h4>август 2020</h4>
           </div>
         </div>
         <div class="gallery-item">
           <div class="gallery-layer">
-            <img src="assets/images/project-3.png" alt="Золотой грамофон">
+            <img src="assets/images/project-3.png" alt="Золотой грамофон" />
             <h3>золотой грамофон</h3>
             <h4>июль 2020</h4>
           </div>
         </div>
         <div class="gallery-item">
           <div class="gallery-layer">
-            <img src="assets/images/project-4.png" alt="Щелкунчик">
+            <img src="assets/images/project-4.png" alt="Щелкунчик" />
             <h3>щелкунчик</h3>
             <h4>май 2020</h4>
           </div>
@@ -157,11 +157,61 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
-            <p>Лучший театр
-              по мнению театральных критиков Парижа</p>
+            <p>Лучший театр по мнению театральных критиков Парижа</p>
           </div>
         </div>
       </div>
     </section>
+    <section class="partners">
+      <div class="medium-container">
+        <h2><span>партнеры</span> театра</h2>
+        <div class="partner-logo-container">
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+          <img src="assets/images/partner-logo.png" alt="Partner logo" />
+        </div>
+      </div>
+    </section>
+    <section class="become-mecenate">
+      <div class="medium-container">
+        <h2><span>стать</span> меценатом</h2>
+        <div class="form-container">
+          <div class="form-contacts">
+            <a href="#">+7 (812) 123-45-55</a>
+            <a href="#">+7 (812) 123-45-66</a>
+            <a href="#">info@theater.ru</a>
+            <a href="#">г. санкт-петербург, невский 140</a>
+          </div>
+          <form action="GET">
+            <div class="input-fields-container">
+                <input type="text" name="name" placeholder="Имя" maxlength="15" required/>
+                <input type="text" name="company" placeholder="Компания" maxlength="25" required/>
+                <input type="tel" name="phone" placeholder="Телефон" maxlength="15" required/>
+                <input type="email" name="email" placeholder="E-mail" maxlength="25" required/>                 
+                <textarea name="message" id="form_message" maxlength="200" placeholder="Сообщение"></textarea>          
+            </div>         
+            <div class="submit-button-container">
+              <p>
+                * Ваши данные не будут переданы третьим лицам, 100% вероятность.
+                Конфиденциальность мы гарантируем, и защищаем персональные
+                данные согласно законку ФЗ-52.
+              </p>
+              <button>Отправить</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="medium-container">
+        <p>(с) Все права защищены. Большой театр. 2020</p>
+        <p>Разработано d-e-n.ru</p>
+      </div>
+    </footer>
   </body>
 </html>
